# test-pack3

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: bump-tag.yml  ci.yml  release.yml
src/himmel/: __init__.py  fuck.py  spiritus.py
tests/: test_fuck.py
